--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -1,1 +1,77 @@
-<p>register-page works!</p>
+<form class="card"
+      [formGroup]="form"
+      (ngSubmit)="onSubmit()"
+>
+  <div class="card-content">
+    <span class="card-title">Зарегистрироваться</span>
+
+    <div class="input-field col s6">
+      <input
+        id="login"
+        type="text"
+        formControlName="name"
+        [ngClass]="{invalid: form.get('name').invalid && form.get('name').touched}"
+      >
+      <label for="login">Логин </label>
+      <span
+        *ngIf="form.get('name').touched && form.get('name').invalid"
+        class="helper-text red-text"
+      >
+        <span  *ngIf="form.get('name').errors.required">Логин не должен быть пустым. </span>
+        <span *ngIf="form.get('name').errors.userName">Пример корректного логина: kebab-case, kebabСase. </span>
+        <span *ngIf="form.get('name').errors.minlength">
+          Логин должен быть не менее {{form.get('name').errors.minlength.requiredLength}} символов,
+          сейчас {{form.get('name').errors.minlength.actualLength}}.
+        </span>
+      </span>
+    </div>
+
+    <div class="row">
+      <div class="input-field col s12">
+        <input id="password" type="password" class="validate" formControlName="password">
+        <label for="password">Пароль</label>
+        <span
+          *ngIf="form.get('password').touched && form.get('password').invalid"
+          class="helper-text red-text"
+        >
+        <span  *ngIf="form.get('password').errors.required">Пароль не должен быть пустым. </span>
+        <span *ngIf="form.get('password').errors.userPassword">Пример корректного пароля: ssD12@#$dd. </span>
+        <span *ngIf="form.get('password').errors.minlength">
+          Пароль должен быть не менее {{form.get('password').errors.minlength.requiredLength}} символов,
+          сейчас {{form.get('password').errors.minlength.actualLength}}.
+        </span>
+      </span>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="input-field col s12">
+        <input id="email" type="email" class="validate" formControlName="email">
+        <label for="email">Email</label>
+
+        <span
+          *ngIf="form.get('email').touched && form.get('email').invalid"
+          class="helper-text red-text"
+        >
+          <span  *ngIf="form.get('email').errors.required">Email не должен быть пустым. </span>
+          <span *ngIf="form.get('email').errors.email">
+            Введите корректный email адрес.
+          </span>
+          <span *ngIf="form.get('email').errors.userEmail">
+            Пример корректного email: new.email.user@dd.co
+          </span>
+        </span>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="card-action">
+    <button
+      [disabled]="form.invalid || form.disabled"
+      class="modal-action btn waves-effect"
+      type="submit"
+    >
+      Войти</button>
+  </div>
+</form>
