--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap');
+@import "~materialize-css/dist/css/materialize.min.css";
+
 $fontFamily: "Montserrat";
 $minWidth: 320px;
 
@@ -16,7 +18,7 @@ button{cursor: pointer;}
 button::-moz-focus-inner{padding: 0;border: 0;}
 a,a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
-ul.li{list-style: none;}
+ul>li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 
@@ -33,6 +35,38 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 @mixin cnt($h) {display: flex; flex-direction: column; height: $h; text-align: center; align-items: stretch; justify-content: center;}
 @mixin tr($x,$y,$z){transform:translate3d($x,$y,$z);-webkit-transform:translate3d($x,$y,$z);-ms-transform:translate3d($x,$y,$z);-o-transform: translate3d($x,$y,$z);-moz-transform:translate3d($x,$y,$z);}
 @mixin flexOrder($val){-webkit-box-ordinal-group: $val;-moz-box-ordinal-group: $val;-ms-flex-order: $val;-webkit-order: $val;order: $val;}
-
 //@mixin flexboxinline(){display:-webkit-inline-flex;display:-moz-inline-flex;display:-ms-inline-flex;display:-o-inline-flex;display:inline-flex;}
 //@mixin flexbox(){display:-webkit-box; display:-moz-box; display:-ms-flexbox; display:-webkit-flex; display:flex; display:-o-box; font-size:0; }
+
+// **************** Auth-layout ***********************************
+.nav-wrapper {
+  padding-left: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  height: 50px;
+}
+.grey {
+  background: grey;
+}
+nav .brand-logo {
+  color: #ffffff;
+  display: inline-block;
+  font-size: 2.1rem;
+  padding: 0;
+  position: static;
+  transform: translateX(0);
+}
+.card {
+  width: 300px;
+  margin: 1rem auto;
+}
+.alert {
+  color: white;
+  background: red;
+  font-size: .7rem;
+  padding: 5px;
+  text-align: center;
+}
+
