--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,4 +69,9 @@ nav .brand-logo {
   padding: 5px;
   text-align: center;
 }
-
+// **************** Site-layout ***********************************
+.main-block {
+  margin: 1rem auto;
+  width: 600px;
+  padding: 5px;
+}
