--- a/src/app/hero-selection-page/hero-selection-page.component.html
+++ b/src/app/hero-selection-page/hero-selection-page.component.html
@@ -1,1 +1,34 @@
-<p>hero-selection-page works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col s12 searchForm">
+      <div class="row">
+        <div class="input-field col s12">
+          <input
+            placeholder="Enter the hero name"
+            id="first_name" type="text" class="validate"
+            [(ngModel)]="name"
+            (keyup.enter)="getByName()"
+          >
+          <label for="first_name">Find hero</label>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="chips" #chips></div>
+
+  <div class="results">
+    <p>Results: {{heroesResults.length}}</p>
+
+    <div
+      *ngIf="heroesResults.length"
+    >
+      <app-hero
+        *ngFor="let hero of heroesResults"
+        [hero]="hero"
+      ></app-hero>
+    </div>
+
+  </div>
+</div>
