--- a/src/app/hero-selection-page/hero-selection-page.component.scss
+++ b/src/app/hero-selection-page/hero-selection-page.component.scss
@@ -5,3 +5,15 @@
   margin: 0 10px;
   padding: 0;
 }
+.results_amount {
+  margin: 10px 0px;
+  padding: 5px 10px;
+}
+.searchForm {
+  position: relative;
+}
+.alphabet {
+  position: absolute;
+  left: -30px;
+  top: 15px;
+}
