--- a/src/app/shared/classes/hero/hero.component.html
+++ b/src/app/shared/classes/hero/hero.component.html
@@ -16,6 +16,6 @@
   </div>
 
   <div class="block_select">
-    <button class="btn btn-block" (click)="selectHero()" [disabled]="!activeButton">select</button>
+    <button class="btn btn-block" (click)="selectHero()" [disabled]="!activeButton" #selectBtn>select</button>
   </div>
 </div>
