--- a/src/app/shared/classes/alphabet/alphabet.component.scss
+++ b/src/app/shared/classes/alphabet/alphabet.component.scss
@@ -1,16 +1,27 @@
-.block button {
-  background-color: white;
-  & a {
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    padding: 2px;
-  }
+button {
+  display: block;
+  font-size: 12px;
+  color: white;
+  text-align: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #26A69A;
 }
-.dropdown-content {
-  width: 50px;
-  & li {
-    min-height: 10px;
-  }
+button:hover, .letter:hover {
+  background-color: #49C9BD;
+  color: white;
+}
+.wrapper {
+  margin-top: 3px;
+  border: 1px solid #49C9BD;
+  border-radius: 3px;
+}
+.letter {
+  width: 35px;
+  color: #26A69A;
+  font-size: 12px;
+  border: 1px solid white;
+  text-align: center;
+  padding: 3px;
 }
