--- a/src/app/shared/layouts/site-layout/site-layout.component.html
+++ b/src/app/shared/layouts/site-layout/site-layout.component.html
@@ -4,10 +4,10 @@
 
     <ul class="auth-right">
       <li routerLinkActive="active">
-        <a routerLink="select">User info</a>
+        <a routerLink="info">User info</a>
       </li>
       <li routerLinkActive="active">
-        <a routerLink="select">AVATAR</a>
+        <a routerLink="info">AVATAR</a>
       </li>
       <li routerLinkActive="active">
         <a (click)="logOut()">Log out</a>
