--- a/src/app/shared/classes/alphabet/alphabet.component.html
+++ b/src/app/shared/classes/alphabet/alphabet.component.html
@@ -1,6 +1,6 @@
 <div class="block">
 
-  <button (click)="isVisible = !isVisible">{{letter}}</button>
+  <button (click)="isVisible = !isVisible">{{currentLetter}}</button>
 
   <div class="wrapper" *ngIf="isVisible">
     <div
