--- a/src/app/shared/classes/heroes-list-tab/heroes-list-tab.component.html
+++ b/src/app/shared/classes/heroes-list-tab/heroes-list-tab.component.html
@@ -23,7 +23,7 @@
 
         <div class="block_select">
           <button class="btn btn-block" [routerLink]="['/select', hero.id]">select</button>
-          <button class="btn btn-block" (click)="toDeleteHero(hero)">delete</button>
+          <button class="btn btn-block" (click)="deleteHero(hero)">delete</button>
         </div>
       </div>
       <div class="plus" routerLink="/select">+</div>
