--- a/src/app/shared/classes/power-ups-tab/power-ups-tab.component.scss
+++ b/src/app/shared/classes/power-ups-tab/power-ups-tab.component.scss
@@ -1,45 +1,33 @@
-.wrap {
-  min-height: 150px;
+.powerupIsPicked {
+  background-color: #00b0ff;
+  border: 1px solid red;
 }
-.header {
-  margin: 10px 0;
-  padding: 0 5px;
-  display: flex;
-  justify-content: space-between;
-  font-size: 1rem;
+.powerupIsNotPickedPicked {
+  background-color: #ccc;
+  border: 1px solid black;
+}
+.header_name {
+  color:  #26A69A;
+  margin: 10px 0 20px 0;
   font-weight: bold;
 }
-
-.listPowerups {
-  top: 90%;
+.powerup {
   display: flex;
   justify-content: space-between;
-  & .powerup {
-    margin: 0 1.3%;
-    width: 14%;
-  }
-  & .powerup:first-child {
-    margin: 0 10px 0 0;
-  }
+  margin: 5px 0;
+  padding: 5px;
   & img {
     height: 50px;
     width: 50px;
-    margin: 0;
-    padding: 3px;
   }
-  & .info {
-    padding: 5px 3px;
+  & .smallBlock {
+    width: 15%;
   }
-  & .title {
-    font-weight: bold;
-    margin: 0 0 5px 0;
+  & .bigBlock {
+    width: 70%;
   }
 }
-.pickedPowerups {
-  margin: 10px 0;
-  display: flex;
-  justify-content: left;
-  & img {
-    margin: 0 20px 10px 0;
-  }
+.title {
+  font-weight: bold;
+  margin: 0;
 }
