--- a/src/app/shared/classes/hero/hero.component.html
+++ b/src/app/shared/classes/hero/hero.component.html
@@ -7,12 +7,12 @@
   </div>
 
   <div class="block_stats">
-    <p>Combat: {{hero.powerstats.combat}}</p>
-    <p>durability: {{hero.powerstats.durability}}</p>
-    <p>Intelligence: {{hero.powerstats.intelligence}}</p>
-    <p>Power: {{hero.powerstats.power}}</p>
-    <p>Speed: {{hero.powerstats.speed}}</p>
-    <p>Strength: {{hero.powerstats.strength}}</p>
+    <p>Combat: {{ hero.powerstats.combat | nullToZero }}</p>
+    <p>durability: {{ hero.powerstats.durability | nullToZero }}</p>
+    <p>Intelligence: {{ hero.powerstats.intelligence | nullToZero }}</p>
+    <p>Power: {{ hero.powerstats.power | nullToZero}}</p>
+    <p>Speed: {{ hero.powerstats.speed | nullToZero}}</p>
+    <p>Strength: {{ hero.powerstats.strength | nullToZero}}</p>
   </div>
 
   <div class="block_select">
