--- a/src/app/shared/classes/power-ups-tab/power-ups-tab.component.html
+++ b/src/app/shared/classes/power-ups-tab/power-ups-tab.component.html
@@ -4,11 +4,11 @@
   </div>
 
   <div class="listPowerups">
-    <div *ngFor="let powerup of listOfPowerups">
+    <div *ngFor="let powerup of listOfPowerups; trackBy: trackByListOfPowerups">
       <div
         [ngClass]="{
         powerupIsPicked: powerup.isPicked,
-        powerupIsNotPickedPicked: !powerup.isPicked,
+        powerupIsNotPicked: !powerup.isPicked,
         powerup: true
         }"
       >
