--- a/src/app/shared/classes/heroes-list-tab/heroes-list-tab.component.html
+++ b/src/app/shared/classes/heroes-list-tab/heroes-list-tab.component.html
@@ -4,7 +4,7 @@
     <p class="results_amount">Selected heroes: {{selectedHeroes? selectedHeroes.length : "0"}}</p>
 
     <div  *ngIf="selectedHeroes.length > 0">
-      <div class="block" *ngFor="let hero of selectedHeroes">
+      <div class="block" *ngFor="let hero of selectedHeroes; trackBy: trackBySelectedHeroes">
         <div class="block_name">
           <p class="block_name-name">{{hero.name}}</p>
           <div class="block_name-avatar">
