--- a/src/app/shared/classes/power-ups-tab/power-ups-tab.component.scss
+++ b/src/app/shared/classes/power-ups-tab/power-ups-tab.component.scss
@@ -2,7 +2,7 @@
   background-color: #00b0ff;
   border: 1px solid red;
 }
-.powerupIsNotPickedPicked {
+.powerupIsNotPicked {
   background-color: #ccc;
   border: 1px solid black;
 }
